--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "kubejs-typings",
 	"version": "1.0.0",
 	"description": "Typescript typings for https://github.com/KubeJS-Mods/KubeJS.",
-	"types": "./src/index.d.ts",
+	"types": "./index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
